<resources>
  <string name="ism_app_name" translatable="false">Isometrik</string>
  <string name="ism_error">Failed to complete requested operation, check Isometrik sdk logs for more details</string>
  <string name="ism_go_live">Go Live</string>
  <string name="ism_no_streams">No live streams found</string>
  <string name="ism_live_streams">Live Streams</string>
  <string name="ism_join">Join</string>
  <string name="ism_fetching_streams">Fetching Streams</string>
  <string name="ism_permission_start_streaming">Grant permission to start streaming!!</string>
  <string name="ism_permission_start_streaming_denied">Permission to start streaming denied!!</string>
  <string name="ism_no_gifts">No gifts currently available!!</string>
  <string name="ism_gift_name">Gift No. %1$s</string>
  <string name="ism_gift_category_animated">Animated Gifts</string>
  <string name="ism_no_gifts_category">No gifts categories</string>
  <string name="ism_remote_audio">%1$s remote audio</string>
  <string name="ism_remote_video">%1$s remote video</string>
  <string name="ism_mute">Mute</string>
  <string name="ism_unmute">Unmute</string>
  <string name="ism_type_something_here">Send a message...</string>
  <string name="ism_live_indicator">Live</string>
  <string name="ism_offline_indicator">Offline</string>
  <string name="ism_message_removed">The message has been removed by %1$s at %2$s</string>
  <string name="ism_you">%1$s(Me)</string>
  <string name="ism_coins">%1$s coins</string>
  <string name="ism_viewer_left">%1$s left the audience</string>
  <string name="ism_viewer_joined">%1$s joined the audience</string>
  <string name="ism_viewer_removed">%1$s has been kicked out of the audience by %2$s</string>
  <string name="ism_viewer_timeout">%1$s in the audience, is not Live anymore</string>
  <string name="ism_member_left">%1$s left the publisher\'s group</string>
  <string name="ism_member_added">%1$s has been added to the publisher\'s group by %2$s</string>
  <string name="ism_member_removed">%1$s has been kicked out of the publisher\'s group by %2$s</string>
  <string name="ism_member_timeout">%1$s in the publisher\'s group, is not Live anymore</string>
  <string name="ism_member_publish_start">%1$s in the publisher\'s group started streaming</string>
  <string name="ism_member_publish_stop">%1$s in the publisher\'s group stopped streaming</string>
  <string name="ism_member_kicked_out">You\'ve been kicked out of the publisher\'s group by %1$s</string>
  <string name="ism_viewer_kicked_out">You\'ve been kicked out of the audience by %1$s</string>
  <string name="ism_leave">Leave</string>
  <string name="ism_filters">Filters</string>
  <string name="ism_masks">Masks</string>
  <string name="ism_effects">Effects</string>
  <string name="ism_clear_all">Clear All</string>
  <string name="ism_hello">Hello</string>
  <string name="ism_adding_request">Sending copublish request</string>
  <string name="ism_removing_request">Deleting copublish request</string>
  <string name="ism_switching_profile">Switching profile</string>
  <string name="ism_got_it">GOT IT</string>
  <string name="ism_not_authorized_publisher">Not authorized to join broadcast as publisher</string>
  <string name="ism_not_authorized_audience">Not authorized to join broadcast as viewer</string>
  <string name="ism_streaming_fail">Failed to join broadcast with error code %1$d</string>
  <string name="ism_disclaimer_message">We moderate Live broadcasts.\nSmoking,vulgarity,porn,indecent exposure,child pornography is not allowed and will be banned.\nLive broadcasts are monitored 24 hours a day. </string>
  <string name="ism_warning_message">Warning: third-party topup or recharge is subject to account closure,suspension or permanent ban. </string>
  <string name="ism_stream_members">Members</string>
  <string name="ism_no_members">No members found</string>
  <string name="ism_admin">Host</string>
  <string name="ism_removing_member">Removing member</string>
  <string name="ism_not_publishing">Not publishing video</string>
  <string name="ism_stream_viewers">Viewers</string>
  <string name="ism_no_viewers">No viewers found</string>
  <string name="ism_remove">Remove</string>
  <string name="ism_removing_viewer">Removing viewer</string>
  <string name="ism_stream_offline_initiator_stop">Broadcast has been ended by the initiator</string>
  <string name="ism_stream_offline_no_publisher">Broadcast is no longer live as none of the members in the publisher\'s group are publishing now</string>
  <string name="ism_stream_offline">Broadcast is no longer live</string>
  <string name="ism_create_user">Create User</string>
  <string name="ism_no_users">No registered users found</string>
  <string name="ism_users">Users</string>
  <string name="ism_select">Select</string>
  <string name="ism_next">Next</string>
  <string name="ism_user_name">User Name*</string>
  <string name="ism_user_identifier">User Identifier*</string>
  <string name="ism_enter_user_name">Enter user name</string>
  <string name="ism_enter_user_identifier">Enter username, phone or email</string>
  <string name="ism_select_user"> Select user</string>
  <string name="ism_avoid_create_user">Don\'t wanna create user?</string>
  <string name="ism_permission_image_capture">Grant permission to capture image!!</string>
  <string name="ism_permission_image_capture_denied">Permission to capture image denied!!</string>
  <string name="ism_image_capture_canceled">Image capture canceled!!</string>
  <string name="ism_image_capture_failure">Failed to capture image!!</string>
  <string name="ism_camera_not_found">Camera not found!!</string>
  <string name="ism_ok">OK</string>
  <string name="ism_invalid_username">Add user name to continue!!</string>
  <string name="ism_invalid_user_identifier">Add user identifier to continue!!</string>
  <string name="ism_invalid_user_image">Add user profile pic to continue!!</string>
  <string name="ism_creating_user">Creating user</string>
  <string name="ism_uploading_image">Uploading image</string>
  <string name="ism_save">Save</string>
  <string name="ism_edit_user">Edit User</string>
  <string name="ism_updating_user_details">Updating user details</string>
  <string name="ism_edit_user_details_canceled">Edit user details canceled!!</string>
  <string name="ism_user_details">User Details</string>
  <string name="ism_user_name_holder">User Name</string>
  <string name="ism_user_identifier_holder">User Identifier</string>
  <string name="ism_switch_user">Switch User</string>
  <string name="ism_deleting_user">Deleting user</string>
  <string name="ism_initiated_by">Initiated by %1$s , %2$s</string>
  <string name="ism_add">Add</string>
  <string name="ism_adding_member">Adding member</string>
  <string name="ism_no_users_add_member">No users found to add to broadcast</string>
  <string name="ism_no_viewers_add_member">No viewers found to add to broadcast</string>
  <string name="ism_fetching_users">Fetching users</string>
  <string name="ism_golive_heading">Go Live with</string>
  <string name="ism_golive_description">When you go live with someone, anyone who can watch their video can watch it too.</string>
  <string name="ism_new_broadcast">New Broadcast</string>
  <string name="ism_add_members">Add members</string>
  <string name="ism_max_members_selected">A broadcast cannot have more than 6 members</string>
  <string name="ism_invalid_broadcast_description">Add broadcast description to continue!!</string>
  <string name="ism_starting_broadcast">Starting broadcast</string>
  <string name="ism_no_users_start_broadcast">No users found to join broadcast</string>
  <string name="ism_connection_lost">You are offline!!</string>
  <string name="ism_stream_requests">Requests</string>
  <string name="ism_accept">Accept</string>
  <string name="ism_decline">Decline</string>
  <string name="ism_mute_local_audio">Mute my audio</string>
  <string name="ism_unmute_local_audio">Unmute my audio</string>
  <string name="ism_mute_remote_audio">Mute remote audio</string>
  <string name="ism_mute_local_video">Mute my video</string>
  <string name="ism_unmute_local_video">Unmute my video</string>
  <string name="ism_mute_remote_video">Mute remote video</string>
  <string name="ism_enable_messages">Show chat messages</string>
  <string name="ism_disable_messages">Hide chat messages</string>
  <string name="ism_enable_network_stats">Show network stats</string>
  <string name="ism_disable_network_stats">Hide network stats</string>
  <string name="ism_enable_control_buttons">Show control buttons</string>
  <string name="ism_disable_control_buttons">Hide control buttons</string>
  <string name="ism_kickout">Kickout</string>
  <string name="ism_warning_leave">Are you sure you want to leave the live video?</string>
  <string name="ism_warning_end">Are you sure you want to end your live video?</string>
  <string name="ism_cancel">Cancel</string>
  <string name="ism_end_video">End Video</string>
  <string name="ism_leave_video">Leave Video</string>
  <string name="ism_copublish_request_heading">Request to be a co-publisher in the live video</string>
  <string name="ism_copublish_request_description">Once you join a live video as a co-publisher, anybody can watch and some of your followers may get notified</string>
  <string name="ism_send_request">Send Request</string>
  <string name="ism_copublish_accepted_heading">%1$s has accepted your request to join the live video as a co-publisher</string>
  <string name="ism_copublish_accepted_description">You can now join the live video as a co-publisher and start publishing</string>
  <string name="ism_start_publishing">Start Video</string>
  <string name="ism_copublish_rejected_heading">%1$s has rejected your request to join the live video as a co-publisher</string>
  <string name="ism_copublish_rejected_description">You can either continue watching or exit from the live video</string>
  <string name="ism_continue">Continue</string>
  <string name="ism_exit">Exit</string>
  <string name="ism_download">Download</string>
  <string name="ism_your_live">You\'re Live</string>
  <string name="ism_notified_users">We\'ve sent a notification to application users, they will start to join soon</string>
  <string name="ism_host">Host</string>
  <string name="ism_viewers_count">%1$s viewers</string>
  <string name="ism_request_message">%1$s has sent a request to be part of the live video as a co-publisher</string>
  <string name="ism_copublish_previously_accepted_heading">%1$s has previously accepted your request to join the live video as a co-publisher</string>
  <string name="ism_copublish_previously_accepted_description">Not being a co-publisher anymore, you can either continue watching or exit from the live video</string>
  <string name="ism_copublish_previously_rejected_heading">%1$s has previously rejected your request to join the live video as a co-publisher</string>
  <string name="filters_download_required">&lt;&lt;&lt;&lt; Download filters required</string>
  <string name="ism_download_filters">Download filters</string>
  <string name="ism_downloading_filters">Downloading filters...</string>
  <string name="ism_download_size">Download size-</string>
  <string name="preparing_filters">Preparing filters</string>
  <string name="filters_prepare_failed">Failed to prepare filters</string>
  <string name="filters_prepared">Filters prepared successfully</string>
  <string name="ism_voice_change">Voice change</string>
  <string name="ism_reverberation">Reverberation</string>
  <string name="ism_accepted">Request accepted</string>
  <string name="ism_declined">Request declined</string>
  <string name="ism_accepting_request">Accepting copublish request</string>
  <string name="ism_declining_request">Declining copublish request</string>
  <string name="ism_no_requests">No co-publish requests found</string>
  <string name="ism_disclaimer">BROADCASTERS UNDER 17 ARE NOT PERMITTED</string>
  <string name="ism_public">PUBLIC</string>
</resources>