<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <TextView
      android:id="@+id/tvSizePh"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_toStartOf="@+id/tvSize"
      android:padding="@dimen/ism_dp_5"
      android:layout_margin="@dimen/ism_dp_13"
      android:maxLines="1"
      android:ellipsize="end"
      android:textColor="@color/ism_filters_gray"
      android:text="@string/ism_download_size"
      android:textSize="@dimen/ism_sp_14" />

  <TextView
      android:id="@+id/tvSize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:padding="@dimen/ism_dp_5"
      android:maxLines="1"
      android:ellipsize="end"
      android:textColor="@color/ism_filters_gray"
      android:layout_margin="@dimen/ism_dp_13"
      android:textSize="@dimen/ism_sp_14" />

  <ProgressBar
      android:id="@+id/pbDownload"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvSize"
      android:max="100"
      style="?android:attr/progressBarStyleHorizontal"
      android:visibility="gone"
      android:layout_margin="@dimen/ism_dp_13"
      android:progress="0"/>

  <TextView
      android:id="@+id/tvDownload"
      android:background="@drawable/ism_request_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/ism_dp_12"
      android:gravity="center_horizontal"
      android:layout_margin="@dimen/ism_dp_13"
      android:text="@string/ism_download_filters"
      android:layout_below="@+id/pbDownload"
      android:textAllCaps="true"
      android:textColor="@color/ism_white"
      android:textStyle="bold"
      android:elevation="@dimen/ism_dp_3"
      />

  <TextView
      android:id="@+id/tvCancel"
      android:background="@drawable/ism_request_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/ism_dp_12"
      android:gravity="center_horizontal"
      android:layout_margin="@dimen/ism_dp_8"
      android:text="@string/ism_cancel"
      android:layout_below="@+id/tvDownload"
      android:textAllCaps="true"
      android:textColor="@color/ism_white"
      android:textStyle="bold"
      android:elevation="@dimen/ism_dp_3"
      />
</RelativeLayout>